button-check fixed, using react fragment to wrap the contents(header and main)

--- a/src/components/content/styles/FacaSeuPedido.css
+++ b/src/components/content/styles/FacaSeuPedido.css
@@ -10,6 +10,14 @@
     user-select: none;
     
 }
+#check-white{
+    cursor: pointer;
+}
+.checks{
+    
+    position: absolute;
+    cursor: pointer;
+}
 small, span, h3, h5, p{
     text-shadow: none;
 }
